--- a/readable-reactux/package.json
+++ b/readable-reactux/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.0.0",
     "react-icons": "^2.2.7",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-alpha.3"
   },
   "scripts": {
