--- a/readable-reactux/package.json
+++ b/readable-reactux/package.json
@@ -11,6 +11,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-icons": "^2.2.7",
+    "react-jsonschema-form": "^1.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
