--- a/readable-reactux/package.json
+++ b/readable-reactux/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-alpha.3",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "shortid": "^2.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
