--- a/readable-reactux/package.json
+++ b/readable-reactux/package.json
@@ -18,7 +18,8 @@
     "reactstrap": "^5.0.0-alpha.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "sort-by": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
