--- a/readable-reactux/package.json
+++ b/readable-reactux/package.json
@@ -7,6 +7,7 @@
     "redux-devtools": "^3.4.0"
   },
   "dependencies": {
+    "riek": "^1.1.0",
     "bootstrap": "^4.0.0-beta",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
